Add new employee view for navigation with hash

--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -8,3 +8,7 @@ homePageTitle=Home
 NotFound=Not Found
 NotFound.text=Sorry, but the requested resource is not available.
 NotFound.description=Please check the URL and try again.
+
+ShowEmployeeList=Show Employee List
+EmployeeList=Employee List
+ListOfAllEmployees=List of all employees
