--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -12,3 +12,13 @@ NotFound.description=Please check the URL and try again.
 ShowEmployeeList=Show Employee List
 EmployeeList=Employee List
 ListOfAllEmployees=List of all employees
+
+EmployeeDetailsOf=Employee Details of
+EmployeeIDColon=Employee ID:
+FirstName=First Name
+LastName=Last Name
+Address=Address
+City=City
+PostalCode=Postal Code
+PhoneHome=Phone (Home)
+Country=Country
